New chat filter

--- a/resources/worldconfig.ini
+++ b/resources/worldconfig.ini
@@ -26,6 +26,9 @@ log_debug_statements=0
 # 0 or 1, should not compile chat hash map to file
 dont_generate_dcf=0
 
+# 0 or 1, use chat file as whitelist?
+use_chat_words_as_whitelist=0
+
 # 0 or 1, should disable chat
 disable_chat=0
 
@@ -40,7 +43,7 @@ phys_sp_tilecount=24
 # Gameplay settings
 
 # Extra feature for DLU, gives a character 2 extra backpack spaces when leveling up
-disable_extra_backpack=0
+disable_extra_backpack=1
 
 # Extra feature for DLU, shows vanity in the world like extra NPCs and plaques commemorating the project and its creators
 disable_vanity=0
@@ -49,7 +52,7 @@ disable_vanity=0
 solo_racing=0
 
 # Disables the anti-speedhack system. If you get kicked randomly you might want to disable this, as it might just be lag
-disable_anti_speedhack=0
+disable_anti_speedhack=1
 
 # 0 or 1, check server fdb (res/CDServer.fdb) against clients
 check_fdb=0
