--- a/resources/chatconfig.ini
+++ b/resources/chatconfig.ini
@@ -16,10 +16,8 @@ dump_folder=
 # How many clients can be connected to the server at once
 max_clients=999
 
-# The required GM level to ignore the filter.
-# Set to 9 to only allow sysadmins to speak freely.
-# Set to 0 to disable the filter for all players.
-filter_gm_level=0
+# 0 or 1, use chat file as whitelist?
+use_chat_words_as_whitelist=0
 
 # 0 or 1, should log to console
 log_to_console=1
