--- a/resources/worldconfig.ini
+++ b/resources/worldconfig.ini
@@ -1,8 +1,8 @@
 # MySQL connection info:
-mysql_host=
-mysql_database=
-mysql_username=
-mysql_password=
+mysql_host=localhost
+mysql_database=darkflame
+mysql_username=darkflame
+mysql_password=123456
 
 # URL to the code repository for the hosted server
 # If you fork this repository and/or make changes to the code, reflect that here to comply with AGPLv3
