--- a/resources/masterconfig.ini
+++ b/resources/masterconfig.ini
@@ -1,14 +1,14 @@
 # MySQL connection info:
-mysql_host=
-mysql_database=
-mysql_username=
-mysql_password=
+mysql_host=localhost
+mysql_database=darkflame
+mysql_username=darkflame
+mysql_password=123456
 
 # The public facing IP address. Can be 'localhost' for locally hosted servers
-external_ip=localhost
+external_ip=35.195.238.2
 
 # The internal ip of the master server
-master_ip=localhost
+master_ip=10.132.0.7
 
 # Port number
 port=2000
