--- a/resources/chatconfig.ini
+++ b/resources/chatconfig.ini
@@ -1,11 +1,11 @@
 # MySQL connection info:
-mysql_host=
-mysql_database=
-mysql_username=
-mysql_password=
+mysql_host=localhost
+mysql_database=darkflame
+mysql_username=darkflame
+mysql_password=123456
 
 # The public facing IP address. Can be 'localhost' for locally hosted servers
-external_ip=localhost
+external_ip=35.195.238.2
 
 # Port number
 port=2005
