--- a/resources/masterconfig.ini
+++ b/resources/masterconfig.ini
@@ -1,14 +1,14 @@
 # MySQL connection info:
-mysql_host=localhost
-mysql_database=darkflame
-mysql_username=darkflame
-mysql_password=123456
+mysql_host=
+mysql_database=
+mysql_username=
+mysql_password=
 
 # The public facing IP address. Can be 'localhost' for locally hosted servers
-external_ip=35.195.238.2
+external_ip=
 
 # The internal ip of the master server
-master_ip=10.132.0.7
+master_ip=
 
 # Port number
 port=2000
