--- a/resources/worldconfig.ini
+++ b/resources/worldconfig.ini
@@ -1,8 +1,8 @@
 # MySQL connection info:
-mysql_host=localhost
-mysql_database=darkflame
-mysql_username=darkflame
-mysql_password=123456
+mysql_host=
+mysql_database=
+mysql_username=
+mysql_password=
 
 # URL to the code repository for the hosted server
 # If you fork this repository and/or make changes to the code, reflect that here to comply with AGPLv3
@@ -46,7 +46,7 @@ disable_extra_backpack=0
 disable_vanity=0
 
 # Extra feature for DLU, enables you to race solo
-solo_racing=0
+solo_racing=1
 
 # Disables the anti-speedhack system. If you get kicked randomly you might want to disable this, as it might just be lag
 disable_anti_speedhack=1
