--- a/resources/authconfig.ini
+++ b/resources/authconfig.ini
@@ -1,11 +1,11 @@
 # MySQL connection info:
-mysql_host=localhost
-mysql_database=darkflame
-mysql_username=darkflame
-mysql_password=123456
+mysql_host=
+mysql_database=
+mysql_username=
+mysql_password=
 
 # The public facing IP address. Can be 'localhost' for locally hosted servers
-external_ip=35.195.238.2
+external_ip=
 
 # Port number. The client has the authserver port hardcoded to 1001
 port=1001
